# dist/swagger.json
@@ -387,92 +387,6 @@
             }
         },
         "/users/profile": {
-            "put": {
-                "operationId": "UpdateMyProfile",
-                "responses": {
-                    "200": {
-                        "description": "Ok",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "anyOf": [
-                                        {
-                                            "properties": {
-                                                "verifyToken": {
-                                                    "type": "string"
-                                                },
-                                                "emailVerified": {
-                                                    "type": "boolean"
-                                                },
-                                                "role": {
-                                                    "$ref": "#/components/schemas/_36_Enums.Role"
-                                                },
-                                                "password": {
-                                                    "type": "string"
-                                                },
-                                                "email": {
-                                                    "type": "string"
-                                                },
-                                                "prenom": {
-                                                    "type": "string"
-                                                },
-                                                "nom": {
-                                                    "type": "string"
-                                                },
-                                                "id": {
-                                                    "type": "number",
-                                                    "format": "double"
-                                                }
-                                            },
-                                            "required": [
-                                                "verifyToken",
-                                                "emailVerified",
-                                                "role",
-                                                "password",
-                                                "email",
-                                                "prenom",
-                                                "nom",
-                                                "id"
-                                            ],
-                                            "type": "object"
-                                        },
-                                        {
-                                            "properties": {
-                                                "message": {
-                                                    "type": "string"
-                                                }
-                                            },
-                                            "required": [
-                                                "message"
-                                            ],
-                                            "type": "object"
-                                        }
-                                    ]
-                                }
-                            }
-                        }
-                    }
-                },
-                "tags": [
-                    "Users"
-                ],
-                "security": [
-                    {
-                        "jwt": []
-                    }
-                ],
-                "parameters": [],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/Partial__nom-string--prenom-string--password-string__"
-                            }
-                        }
-                    }
-                }
-            },
             "get": {
                 "operationId": "GetMyProfile",
                 "responses": {
@@ -540,6 +454,84 @@
                     }
                 ],
                 "parameters": []
+            },
+            "put": {
+                "operationId": "UpdateMyProfile",
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "anyOf": [
+                                        {
+                                            "properties": {
+                                                "emailVerified": {
+                                                    "type": "boolean"
+                                                },
+                                                "role": {
+                                                    "$ref": "#/components/schemas/_36_Enums.Role"
+                                                },
+                                                "email": {
+                                                    "type": "string"
+                                                },
+                                                "prenom": {
+                                                    "type": "string"
+                                                },
+                                                "nom": {
+                                                    "type": "string"
+                                                },
+                                                "id": {
+                                                    "type": "number",
+                                                    "format": "double"
+                                                }
+                                            },
+                                            "required": [
+                                                "emailVerified",
+                                                "role",
+                                                "email",
+                                                "prenom",
+                                                "nom",
+                                                "id"
+                                            ],
+                                            "type": "object"
+                                        },
+                                        {
+                                            "properties": {
+                                                "message": {
+                                                    "type": "string"
+                                                }
+                                            },
+                                            "required": [
+                                                "message"
+                                            ],
+                                            "type": "object"
+                                        }
+                                    ]
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "Users"
+                ],
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ],
+                "parameters": [],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Partial__nom-string--prenom-string--password-string__"
+                            }
+                        }
+                    }
+                }
             }
         },
         "/private": {
